# CS230Project3

./: .flaskenv  .gitignore  README.md  json_save.py  main.py  mcp.py  pyproject.toml  requirements.txt
BackEnd/: __init__.py  database.py  main.py  models.py  routes.py  schema.py
BackEnd/auth/: auth.py
BackEnd/database/: database.db
BackEnd/internal/: admin.py  utils.py
BackEnd/middleware/: check_user.py
BackEnd/routers/: routes.py  tasks.py
FrontEnd/example-calendar/: index.html  package-lock.json  package.json
FrontEnd/example-calendar/src/: App.jsx  main.jsx
FrontEnd/my-react-app/: .gitignore  package-lock.json  package.json
FrontEnd/my-react-app/src/: App.css  App.jsx
FrontEnd/my-react-app/src/assets/components/: Calendar.jsx  LoginForm.jsx  SignUpForm.jsx
MCP/: claude_config.txt  mcp_helper.py  mcp_server.py
