[project]
name = "cs230project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.44",
    "mcp>=1.17.0",
    "fastapi[standard]",    
    "uvicorn>=0.30.0"
]

[tool.uv.workspace]
members = [
    "BackEnd"
]


